added drop shadow to song covers

--- a/jonathanBeard/index.html
+++ b/jonathanBeard/index.html
@@ -19,7 +19,7 @@
           <h2 class="mb-3 fs-4"> producer | sound mixer from nashville</h2>
           <div class="col-sm-auto mx-auto d-md-none text-center">
             <figure>
-              <img src="images/jonathanBeardPortrait.webp" class="rounded img-fluid jbeard-portrait" alt="portrait of Jonathan Beard carrying a guitar in front of his computer with a keyboard on the desk.">
+              <img src="images/jonathanBeardPortrait.webp" class=" box-shadow rounded img-fluid jbeard-portrait" alt="portrait of Jonathan Beard carrying a guitar in front of his computer with a keyboard on the desk.">
             </figure>
           </div>
           <div class="row">
